<resources>
    <string name="app_name">MyContact App</string>
    <string name="second_implementation">SECOND IMPLEMENTATION</string>
    <string name="first_implementation">FIRST IMPLEMENTATION</string>
    <string name="welcome_to_mycontact_app">WELCOME TO MYCONTACT APP</string>
    <string name="background_image_for_welcome_page">Background image for welcome page</string>
    <string name="kufre_udoh">Kufre Udoh</string>
    <string name="aa">AA</string>
    <string name="_07067991832">07067991832</string>
    <string name="make_request_to_read_contacts">MAKE REQUEST AGAIN</string>
    <string name="make_request">MyContact app needs access to read your phone\'s contact. Kindly click the button below to make request again</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_a_new_contact_button">Add a new contact button</string>
    <string name="kufre">Kufre</string>
    <string name="udoh">Udoh</string>
    <string name="create_a_new_contact">Create a new contact</string>
    <string name="save">SAVE</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="phone_number">Phone number</string>
    <string name="email_address">Email address</string>
    <string name="added_contact">Contact has been added</string>
    <string name="error">%1$s</string>
    <string name="first_name_required">First name is required</string>
    <string name="last_name_required">Last name is required</string>
    <string name="phone_number_is_required">Phone number is required</string>
    <string name="edit_contact">Edit contact</string>
    <string name="update">UPDATE</string>
    <string name="email_is_required">Email is required</string>
    <string name="enter_valid_email">Enter a valid email address</string>
    <string name="Contact_deleted_successfully">Contact deleted successfully</string>
    <string name="Contact_updated_successfully">Contact updated successfully</string>
    <string name="share_contact_via">Share contact via</string>
    <string name="send_mail_via">Send mail via</string>
    <string name="permission_denied">Permission denied</string>
    <string name="delete_prompt">Are you sure you want to delete this contact?</string>
    <string name="yes">Yes</string>
    <string name="work">Work</string>
    <string name="kufreabasi_udoh_decagon_dev">kufreabasi.udoh@decagon.dev</string>
</resources>